# todo_django_project

./: pyproject.toml
todo_app/: admin.py  models.py  serializers.py  urls.py  views.py
todo_app/migrations/: 0001_initial.py
todo_project/: settings.py  urls.py
